--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,13 @@
 }
 
 :root {
+  --color-text: #000;
+  --color-bg: #fff;
   --color-menu-bg: #fff;
   --color-menu-border: #ccc;
-  --color-error-string: #f00;
+  --color-error-string: #dc3545;
+  --color-success-string: #28a745;
+  --color-popup-overlay: rgba(0, 0, 0, 0.5);
 }
 
 html,
@@ -29,6 +33,8 @@ html {
 
 body {
   --site-font-size: 16;
+  color: var(--color-text);
+  background-color: var(--color-bg);
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: calc(var(--site-font-size, 16) * 1px);
@@ -101,7 +107,8 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 }
 
@@ -139,7 +146,8 @@ p {
   text-align: center;
 }
 
-#controldiv button {
+/* #controldiv button { */
+button {
   font-weight: 700;
   font-size: 1.5rem;
   padding: 0.8rem 2rem;
@@ -154,7 +162,33 @@ p {
   color: var(--color-error-string);
 }
 
+#popupdiv .overlay {
+  position: fixed;
+  z-index: 20;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-popup-overlay);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+#popupdiv .message {
+  font-size: 1.5rem;
+  padding: 0 1.5rem;
+  text-align: center;
+  background-color: var(--color-bg);
+}
+
+#successdiv {
+  color: var(--color-success-string);
+  margin: 1rem 0;
+}
+
 #errordiv {
   color: var(--color-error-string);
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
