Remove horizontal overflow scroll and unnecessary margins

--- a/src/style.styl
+++ b/src/style.styl
@@ -98,7 +98,6 @@ section
   overflow: hidden
   min-height: 5rem
   height: 10rem
-  margin-bottom: 1rem
   @media only screen and (min-width: 600px)
     height: 15rem
   img
@@ -109,7 +108,6 @@ section
 #controldiv
   font-size: 1.5rem
   text-align: center
-  margin-top: 2rem
   input
     font-weight: 700
     font-size: 1.5rem
@@ -187,6 +185,7 @@ section
 .faqdiv
   padding: 0 2rem
   margin-bottom: 2rem
-  overflow-x: scroll
+  a
+    overflow-wrap: break-word
   .question
     font-weight: 700
